--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -3,3 +3,4 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/markitup/style.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/markitup/skin/style.css" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/jquery-ui-1.8.17.custom.css" />
+<link href='http://fonts.googleapis.com/css?family=Dosis:400,600|Arvo:700italic|Muli' rel='stylesheet' type='text/css'>
