Changing bar at the top to be a progress bar.

--- a/app/views/paths/popups/_launchpad.html.haml
+++ b/app/views/paths/popups/_launchpad.html.haml
@@ -11,7 +11,7 @@
             Sections
           %ul.sectionlist
             - @path.sections.each do |s|
-              %li.launchpad_link= link_to s.name, launchpad_section_path(s), remote: true, style: "text-decoration: none;"
+              %li.launchpad_link= link_to s.name, launchpad_section_path(s), remote: true, style: "text-decoration: none;"+(s.unlocked?(current_user) ? "font-weight: bold" : "")
         = render "sections/launchpad"
 
 :javascript
