--- a/app/views/pages/consumer_landing.html.erb
+++ b/app/views/pages/consumer_landing.html.erb
@@ -1,40 +1,45 @@
-<script>
-$(function(){
-  $("a").not(".clickable_link").attr("href", "#");
-});
-</script>
-<div class="row" style="margin-bottom:50px;">
-  <%= render "path_grid", { :paths => @first_four_challenges } %>
-</div>
-<div class="row" style="margin-bottom:50px;">
-  <div class="span8">
-    <h1 style="font-size:90px;">Meta<span style="color:green">Bright</span></h1>
-    <h2 style="font-size: 22px;">Prove yourself.</h2>
+<html>
+<head>
+  <%= render "layouts/head" %>
+  <style>
+    .topbar-inner, .topbar .fill { background-color: #001A00; }
+    body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg');background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif;}
+    .topbar h3 a, .topbar .brand {float: left;    display: block;padding: 0px 20px 12px;margin-left: -20px;color: white;font-weight: 200;line-height: 1;text-decoration: none;font: normal 18px arial, sans-serif;}
+    #landingbox{height:335px;width:695px;margin-left:auto;margin-right:auto;margin-top:140px;background-color:whitesmoke;  border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
+    #logospace{width:720px;margin-right:auto;margin-left:auto;position: relative;}
+    #landinglogo{width:720px;margin-top:-40px; margin-bottom:-30px; }
+    #buttonspace{ margin-top:30px;}
+    #LogIn button, #Register button{ font-size:20px;width:160px;height:60px;font-weight:bold; }
+    #tagline{ width:538px; margin-right:auto; margin-left:auto; text-align:center;}
+    #tagline span{font-size:15px;font-style:italic;}
+    #LogIn{ display:inline;position:relative;margin-left:129px; }
+    #Register{display:inline-block;margin-right:0;position:relative;}
+    .navbar-inner {background-color: #8d7398;}
+    .btn.danger{background-color: #971D1C; background-repeat: repeat-x;background-image: -khtml-gradient(linear, left top, left bottom, from(#EE5F5B), to(#971D1C)); background-image: -moz-linear-gradient(top, #EE5F5B, #971D1C);background-image: -ms-linear-gradient(top, #EE5F5B, #971D1C); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #EE5F5B), color-stop(100%, #971D1C)); background-image: -webkit-linear-gradient(top, #EE5F5B, #971D1C);ackground-image: -o-linear-gradient(top, #EE5F5B, #971D1C);background-image: linear-gradient(top, #EE5F5B, #971D1C);filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#971D1C', GradientType=0);text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);border-color: #C43C35 #C43C35 #971D1C;}
+  </style>
+</head>
+<body>
+  <nav class="topbar" data-scollspy="scrollspy" data-dropdown="dropdown">
+    <div class="fill">
+      <div class="container">
+        <h3><a href="/" style="font-size: 26px;">MetaBright</a></h3>
+      </div>
+    </div>
+  </nav>
+  <div id="landingbox">
+    <div id="logospace">
+        <img id="landinglogo" src="https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo">
+    </div>
+    <div id="tagline"><span>We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.</span></div>
+    <div id="buttonspace">
+        <div id="LogIn">
+            <button class="btn danger">Sign In</button>
+        </div>
+        <span style="padding:0 37px; font-size:20px;">-or-</span>
+        <div id="Register">
+            <button class="btn danger">Register</button>
+        </div>
+    </div>
   </div>
-  <div class="span8">
-  <%= form_for(:session, :url => sessions_path) do |f| %>
-    <div class="field clearfix">
-      <%= f.label :email %>
-      <div class="input">
-        <%= f.text_field :email, :autofocus => true %>
-      </div>
-    </div>
-    <div class="field clearfix">
-      <%= f.label :password %>
-      <div class="input">
-        <%= f.password_field :password %>
-      </div>
-    </div>
-    <div class="field clearfix">
-      <div class="input">
-        <p>Not registered yet? <%= link_to "Request an invite.", invitation_path, :class => "clickable_link" %></p>
-      </div>
-    </div>
-    <%= f.submit "Sign in", :class => "btn primary", :style => "margin-left:150px;" %>
-    <%= link_to "Login with Facebook", "/auth/facebook", :class => "btn secondary clickable_link" %>
-  <% end %>
-  </div>
-</div>
-<div class="row" style="margin-bottom:50px;">
-  <%= render "path_grid", { :paths => @last_four_challenges } %>
-</div>
+</body>
+</html>
