--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -1,3 +1,29 @@
+/* Font */
+@font-face {
+  font-family: 'Dosis';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Dosis Regular'), local('Dosis-Regular'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/Ewe0SEXPrakEimFzbOGwB6CWcynf_cDxXwCLxiixG1c.woff) format('woff');
+}
+@font-face {
+  font-family: 'Muli';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Muli'), url(http://themes.googleusercontent.com/static/fonts/muli/v4/minRpKQdEvXRRS8oAbAtWvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+}
+@font-face {
+  font-family: 'Arvo';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Arvo Bold Italic'), local('Arvo-BoldItalic'), url(http://themes.googleusercontent.com/static/fonts/arvo/v5/Vj6JEk1YZr8j8R8H2j0b-rO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+}
+@font-face {
+  font-family: 'Dosis';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Dosis SemiBold'), local('Dosis-SemiBold'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/f8qltGyj2S-SS_tsOHsjgXYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
+}
+
 /* Stream */
 .newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
 .newsfeed p{ margin:9px 12px; font:300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa;}
@@ -139,3 +165,39 @@
 .span11{ display: inline-block; vertical-align: top; }
 .container.body { width: 940px; padding: 15px; }
 #content { padding-top: 55px; }
+
+/* From profile */
+#homepage{
+  background-color: white;
+  background: url('https://twimg0-a.akamaihd.net/a/1343405872/t1/img/wash-white-30.png');
+  font-family: muli,sans-serif;
+  color:#333;     
+}
+#topboxcontent{ width:729px; }
+#topboxcontent h1{ margin:0px; font-size:40px; display:inline; }
+.profilepersonaicons{ list-style-type: none; margin:3px 0px 13px 0px; display:inline; margin-left:4px; }
+.profilepersonaicons li{ display:inline-block; margin-right:8px; height:30px; width:30px; }
+.profilepersonaicons img{ margin-right:8px; height:30px; width:30px; }
+.leftrailcontent{ list-style-type: none; display:list-item; margin-top:3px; }
+.leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; }
+.leftbox{
+  text-shadow: 0 1px 0 white;
+  border: 1px solid rgba(0, 0, 0, .1);
+  font-size:12px;
+  position: relative;
+  margin-bottom: 10px;
+  line-height: 16px;
+  border-radius: 6px;
+  display:block;
+}
+.leftboxheader{
+  background-color: #F9F9F9;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  padding:10px 12px;
+  border-bottom: 1px solid #DDD;
+  font-weight: bold;
+  letter-spacing: .14em;
+}
+.leftboxfooter ul{ list-style-type:none; margin:0; }
+.leftboxfooter span{ font-size:11px; color:gray; }
