Adding home page.

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,7 +22,7 @@
             %ul.inlinedisplay
               %li
                 %div.mosaic-block.bar2
-                  %a{ href: "#", target: "_blank", class: "mosaic-overlay" }
+                  %a.mosaic-overlay{ href: "#", target: "_blank" }
                     %div.details
                       %h4 New Challenge added!
                       %p Kitten Throwing!
